# book-builder

./: .gitignore  DEPLOYMENT_CHECKLIST.md  LICENSE  MANIFEST.in  Makefile  README.md  README_PUBLICATION.md  RELEASE_PROCESS.md  TESTING_GUIDE.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: main.yml  pr_checks.yml  publish.yml
book_builder/: __init__.py  cli.py  create_book_structure.py  version.py
book_builder/adapter/: __init__.py  catalog.py  cli.py  cnxml_adapter.py  cnxml_shared.py  cnxml_to_pretext_section.py  document_io.py  fragments.py  models.py  populate.py  pretext_adapter.py  scoped_ids.py
book_builder/audits/: __init__.py  audit_questions.py  cli.py  lesson_plans.py  orphaned.ptx  reports.py
book_builder/content/: __init__.py  add_labels.py  cli.py  create_book_skeleton.py  create_book_structure.py  namespace.py  objectives.py  resources.py  syllabus_tables.py
book_builder/helpers/: __init__.py  _csvtools.py  _google.py
book_builder/populator/: __init__.py  catalog.py  cli.py  cnxml_adapter.py  cnxml_shared.py  cnxml_to_pretext_section.py  document_io.py  fragments.py  models.py  populate.py  pretext_adapter.py
book_builder/sheets/: __init__.py  create_stax_toc.py  load_sheets.py
book_builder/toc/: create_pretext_toc.py  create_stax_toc.py  generate_structure.py  load_sheets.py
book_builder/utils/: __init__.py  _csvtools.py  _google.py
docs/source/: conf.py  index.md  installation.md  overview.md
input/: Book Structure.csv  Open Textbooks.csv  README.md  cnxml-scoped-id-map.csv  cnxml-scoped-id-map.json  intermediate-algebra-2e-toc.csv  orcca-toc-legacy.csv  orcca-toc.csv  precalculus-2e-toc.csv  statistics-toc.csv  stax-toc.xlsx
reference_tocs/: README.md  cnxml-scoped-id-map.csv  orcca-toc-legacy-id-map.csv  prealgebra-2e-toc.csv
scripts/: prepare_changelog.py  release.sh
textbook_info/: Automatic Links.csv  Essential Syllabus.csv  README.md  Stack Questions by Section.csv
