[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "book-builder"
dynamic = ["version"]
description = "Utilities for building a PreTeXt textbook workflow from mixed open-source inputs (CNXML and PreTeXt)"
readme = "README.md"
authors = [
    {name = "Ben Lloyd-Hurwitz", email = "benlloydhurwitz@gmail.com"}
]
requires-python = ">=3.12"
keywords = ["pretext", "textbook", "cnxml", "publishing", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "google-api-python-client>=2.80.0",
  "google-auth>=2.20.0",
  "google-auth-oauthlib>=1.0.0",
  "lxml>=4.9.0",
  "pandas>=2.0.0",
  "pypdf>=3.0.0",
  "python-slugify>=8.0.0",
  "tqdm>=4.65.0",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/B28LH/book-builder"
Repository = "https://github.com/B28LH/book-builder"
Changelog = "https://github.com/B28LH/book-builder/blob/main/CHANGELOG.md"
# Documentation = "https://book-builder.readthedocs.io/"

[project.scripts]
book-builder = "book_builder.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<2.0",
    "black>=23.0,<26.0",
    "isort>=5.12,<5.14",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=6.0,<10.0",
    "furo==2024.8.6",
    "myst-parser>=1.0",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints==1.23.3",
    "packaging"
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
book_builder = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "book_builder.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
